force-app/main/default/objects/cgcloud__Segmentation_Rule__c/cgcloud__Segmentation_Rule__c.object-meta.xml
<CustomObject>
    <description>Store user filter criteria used to create the customer segmentation. Contains a link to the Customer Set object where the list of accounts is stored</description>
    <label>Segmentation Rule</label>
    <nameField>
        <displayFormat>SR - {0000000}</displayFormat>
        <label>Segmentation Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Segmentation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>