force-app/main/default/objects/cgcloud__Segmentation_Rule__c/fields/cgcloud__Input_Variables_JSON__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Input_Variables_JSON__c</fullName>
    <description>JSON with the user input.</description>
    <label>Input Variables (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>