force-app/main/default/objects/cgcloud__Segmentation_Rule__c/fields/cgcloud__Org_Unit_Hierarchy_Node__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Unit_Hierarchy_Node__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the field used to display org unit lookup to be able to select the hierarchy node to apply filter on customer hierarchy.</description>
    <label>Org Unit Hierarchy Node</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Segmentation Rule and the Org Unit Hierarchy Node must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>cgcloud__Org_Unit__c.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Org_Unit__c</referenceTo>
    <relationshipLabel>Segmentation Rules</relationshipLabel>
    <relationshipName>Segmentation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>