force-app/main/default/objects/cgcloud__Segmentation_Rule__c/fields/cgcloud__Result_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Result_Level__c</fullName>
    <description>Defines the level to retrieve customers from.</description>
    <label>Result Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Org</fullName>
                <default>true</default>
                <label>Trade Org</label>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>