force-app/main/default/objects/cgcloud__Segmentation_Rule__c/fields/cgcloud__Segmentation_Rule_Def__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Segmentation_Rule_Def__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to segmentation rule definition.</description>
    <label>Segmentation Rule Definition</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Released Rule Definitions are available. The Sales Org should be the same as the Segmentation Rule.</errorMessage>
        <filterItems>
            <field>cgcloud__Segmentation_Rule_Def__c.cgcloud__State__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </filterItems>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Segmentation_Rule_Def__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Segmentation_Rule_Def__c</referenceTo>
    <relationshipLabel>Segmentation Rules</relationshipLabel>
    <relationshipName>SegementationRules</relationshipName>
    <type>Lookup</type>
</CustomField>