force-app/main/default/objects/cgcloud__Segmentation_Rule__c/fields/cgcloud__Segmentation_Rule_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Segmentation_Rule_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to segmentation rule template.</description>
    <label>Segmentation Rule Template</label>
    <referenceTo>cgcloud__Segmentation_Rule_Template__c</referenceTo>
    <relationshipLabel>Segmentation Rules</relationshipLabel>
    <relationshipName>Segementations_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>