force-app/main/default/objects/cgcloud__Segmentation_Rule__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Segmentation_Rule_Def__c</columns>
    <columns>cgcloud__Segmentation_Rule_Template__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>cgcloud__Result_Level__c</columns>
    <columns>cgcloud__Hierarchy_Node__c</columns>
    <columns>cgcloud__Org_Unit_Hierarchy_Node__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>